--- a/.env.local.example
+++ b/.env.local.example
@@ -1,28 +1,17 @@
+# -- Next Auth
 NEXTAUTH_URL=http://localhost:8083
 NEXTAUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
 
-APPLE_ID=
-APPLE_TEAM_ID=
-APPLE_PRIVATE_KEY=
-APPLE_KEY_ID=
-
-AUTH0_ID=
-AUTH0_SECRET=
-AUTH0_ISSUER=
-
-FACEBOOK_ID=
-FACEBOOK_SECRET=
-
-GITHUB_ID=
-GITHUB_SECRET=
-
-GOOGLE_ID=
-GOOGLE_SECRET=
-
-TWITTER_ID=
-TWITTER_SECRET=
-
-EMAIL_SERVER=smtp://username:password@smtp.example.com:587
-EMAIL_FROM=NextAuth <noreply@example.com>
-
-DATABASE_URL=sqlite://localhost/:memory:?synchronize=true
+# -- Beyond Identity
+TENANT_ID=
+API_TOKEN=
+REALM_ID=
+AUTHENTICATOR_CONFIG_ID=
+APPLICATION_ID=
+APP_CLIENT_ID=
+APP_CLIENT_SECRET=
+ADMIN_REALM_ID=
+MGMT_API_CLIENT_ID=
+MGMT_API_CLIENT_SECRET=
+MGMT_API_APPLICATION_ID=
+REGION=
