--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "private": true,
-  "description": "An example project for NextAuth.js with Next.js",
-  "repository": "https://github.com/nextauthjs/next-auth-example.git",
+  "description": "Getting started with Beyond Identitities JS SDK using NextAuth",
+  "repository": "https://github.com/gobeyondidentity/getting-started.git",
   "bugs": {
-    "url": "https://github.com/nextauthjs/next-auth/issues"
+    "url": "https://github.com/gobeyondidentity/getting-started/issues"
   },
-  "homepage": "https://next-auth-example.vercel.app",
+  "homepage": "https://developer.beyondidentity.com/docs/v1/getting-started",
   "scripts": {
     "dev": "next -p 8083",
     "build": "next build",
-    "start": "yarn && yarn build && (sleep 0.5 ; open http://localhost:8083) & next start -p 8083"
+    "start": "yarn install && next build && (sleep 0.5 ; open http://localhost:8083) & next start -p 8083"
   },
-  "author": "Iain Collins <me@iaincollins.com>",
+  "author": "Ismail Mustafa <ismail.mustafa@beyondidentity.com>",
   "contributors": [
-    "Balázs Orbán <info@balazsorban.com>",
-    "Nico Domino <yo@ndo.dev>",
-    "Lluis Agusti <hi@llu.lu>"
+    "Ismail Mustafa <ismail.mustafa@beyondidentity.com>"
   ],
   "dependencies": {
     "@beyondidentity/bi-sdk-js": "1.0.7",
