--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/node": "^17",
     "@types/react": "^18.0.15",
     "@types/react-highlight": "^0.12.5",
+    "eslint": "^8.20.0",
+    "eslint-config-next": "12.2.3",
     "typescript": "^4"
   }
 }
