--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,14 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["process.d.ts", "next-env.d.ts", "next-auth.d.ts", "**/**/*.ts", "**/**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "process.d.ts",
+    "next-env.d.ts",
+    "next-auth.d.ts",
+    "**/**/*.ts",
+    "**/**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
