--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "homepage": "https://developer.beyondidentity.com/docs/v1/getting-started",
   "scripts": {
     "dev": "next build && ((sleep 0.5 ; open http://localhost:8083) & next -p 8083)",
+    "build": "next build",
     "start": "yarn install && next build && ((sleep 0.5 ; open http://localhost:8083) & next start -p 8083)"
   },
   "author": "Ismail Mustafa <ismail.mustafa@beyondidentity.com>",
