Developer workshop prep

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,6 @@
+# -- Sign Up 
+https://www.beyondidentity.com/developers/signup
+
 # -- Next Auth
 NEXTAUTH_URL=http://localhost:8083
 NEXTAUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
@@ -14,3 +17,5 @@ AUTHENTICATOR_CONFIG_ID=
 
 APP_CLIENT_ID=
 APP_CLIENT_SECRET=
+
+
